--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
+    "@nomiclabs/hardhat-truffle5": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-environment": "^0.1.9",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -20,12 +24,20 @@
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.17"
+    "solidity-coverage": "^0.7.17",
+    "web3": "^1.6.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
     "@openzeppelin/contracts-upgradeable": "^4.3.2",
+    "bignumber": "^1.1.0",
+    "chai-as-promised": "^7.1.1",
     "ethereumjs-wallet": "^1.0.2",
-    "ethers-utils": "^2.1.11"
+    "ethers-utils": "^2.1.11",
+    "hardhat-truffle5": "^1.0.1",
+    "truffle": "^5.4.19"
+  },
+  "scripts": {
+    "test": "mocha --exit --recursive"
   }
 }
