--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ethereumjs-wallet": "^1.0.2",
     "ethers-utils": "^2.1.11",
     "hardhat-truffle5": "^1.0.1",
+    "package.json": "^2.0.1",
     "truffle": "^5.4.19"
   },
   "scripts": {
